--- a/HW-wireframe.css
+++ b/HW-wireframe.css
@@ -1,56 +1,58 @@
-body { 
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    color: #777;
-    background-color: #777;
-    width: 960px;
+body {width: 960px;
+    margin: auto;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     font-size: 18px;
-    margin:auto;
-}
-#left-section{ 
-    float: left; 
-    width: 50%;
-    
-}
-header{
-    background: #ebebeb;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    padding: 20px;
-    text-align: center
-}
-section{ 
-margin-left: 0%;
-}
-
-nav{
-    background: #ebebeb;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    line-height: 34px;
+    color: #777;
+    background: #777;
+  }
+  header,
+  nav,
+  section,
+  aside,
+  footer {
+    display: block;
+    padding: 10px;
+    margin: 10px;
     text-align: center;
-    padding: 20px;
-    
-}
-nav{
-    margin-top: 0%; 
-}
-section{
     background: #ebebeb;
-    ;
-}
-aside{
-        background: #ebebeb;
-        width: 50%;
-        float: right;
-    }
-h1{
-    background: #ebebeb;
-    
-}
-footer{ 
-    clear:both;
-    margin: 5%;
-    text-align: center 
-}
+  }
+  
+  section {
+    display: block;
+    float: left;
+    width: 495px;
+    height: 267px;
+    overflow: hidden;
+  }
+  
+  aside {
+    display: block;
+    float: right;
+    width: 40%;
+    height: 267px;
+    overflow: hidden;
+  }
+article {
+    padding: 10px;
+    color: #ebebeb;
+    background: #777;
+  }
+  
+  .clear {
+    clear: both;
+  }
+  h1,
+  p {
+    width: 90%;
+    padding: 10px;
+    margin: 10px;
+    color: #777;
+    text-align: center;
+    background: #ebebeb;}
+
+
+
 
 
 
